force-app/main/default/objects/Genetic_Provider_Variety__c/Genetic_Provider_Variety__c.object-meta.xml
<CustomObject>
    <label>Genetic Provider Variety</label>
    <nameField>
        <label>Genetic Provider Variety Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genetic Provider Varieties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>