force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Genetic Provider Varieties</relationshipLabel>
    <relationshipName>Genetic_Provider_Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>