force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Brown_Stem_Rot__c.field-meta.xml
<CustomField>
    <fullName>Brown_Stem_Rot__c</fullName>
    <label>Brown Stem Rot</label>
    <length>40</length>
    <type>Text</type>
</CustomField>