force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Charcoal_Rot__c.field-meta.xml
<CustomField>
    <fullName>Charcoal_Rot__c</fullName>
    <label>Charcoal Rot</label>
    <length>40</length>
    <type>Text</type>
</CustomField>