force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Commercial_Brand__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Brand</label>
    <referenceTo>Licensee_Brand__c</referenceTo>
    <relationshipLabel>Genetic Provider Varieties</relationshipLabel>
    <relationshipName>Genetic_Provider_Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>