force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Emergence__c.field-meta.xml
<CustomField>
    <fullName>Emergence__c</fullName>
    <label>Emergence</label>
    <length>20</length>
    <type>Text</type>
</CustomField>