force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Exclusive__c.field-meta.xml
<CustomField>
    <fullName>Exclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive</label>
    <type>Checkbox</type>
</CustomField>