force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Frogeye__c.field-meta.xml
<CustomField>
    <fullName>Frogeye__c</fullName>
    <label>Frogeye</label>
    <length>40</length>
    <type>Text</type>
</CustomField>