force-app/main/default/objects/Genetic_Provider_Variety__c/fields/GDM_Variety_Code__c.field-meta.xml
<CustomField>
    <fullName>GDM_Variety_Code__c</fullName>
    <label>Production Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>