force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Growth_Habit__c.field-meta.xml
<CustomField>
    <fullName>Growth_Habit__c</fullName>
    <label>Growth Habit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>