force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Hilum_Color__c.field-meta.xml
<CustomField>
    <fullName>Hilum_Color__c</fullName>
    <label>Hilum Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>