force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Maturity__c.field-meta.xml
<CustomField>
    <fullName>Maturity__c</fullName>
    <formula>Right(Maturity_Group__c,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity</label>
    <type>Text</type>
</CustomField>