force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Maturity_Group__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Group__c</fullName>
    <label>Maturity Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>