force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Oil_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Oil_Concentration__c</fullName>
    <label>Oil Concentration %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>