force-app/main/default/objects/Genetic_Provider_Variety__c/fields/PRR_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>PRR_Tolerance__c</fullName>
    <label>PRR Tolerance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>