force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <label>Regions</label>
    <length>80</length>
    <type>Text</type>
</CustomField>