force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Relative_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Relative_Maturity__c</fullName>
    <label>Relative Maturity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>