force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Root_Knot_Nematode__c.field-meta.xml
<CustomField>
    <fullName>Root_Knot_Nematode__c</fullName>
    <label>Root Knot Nematode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>