force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Royalty_Rate__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Rate__c</fullName>
    <label>Royalty Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>