force-app/main/default/objects/Genetic_Provider_Variety__c/fields/SCN_Race_3__c.field-meta.xml
<CustomField>
    <fullName>SCN_Race_3__c</fullName>
    <label>SCN Race 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>