force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Seed_Size__c.field-meta.xml
<CustomField>
    <fullName>Seed_Size__c</fullName>
    <label>Seed Size</label>
    <length>40</length>
    <type>Text</type>
</CustomField>