force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Shattering__c.field-meta.xml
<CustomField>
    <fullName>Shattering__c</fullName>
    <label>Shattering</label>
    <length>20</length>
    <type>Text</type>
</CustomField>