force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Standability__c.field-meta.xml
<CustomField>
    <fullName>Standability__c</fullName>
    <label>Standability</label>
    <length>40</length>
    <type>Text</type>
</CustomField>