force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Stem_Canker__c.field-meta.xml
<CustomField>
    <fullName>Stem_Canker__c</fullName>
    <label>Stem Canker</label>
    <length>40</length>
    <type>Text</type>
</CustomField>