force-app/main/default/objects/Genetic_Provider_Variety__c/fields/STS__c.field-meta.xml
<CustomField>
    <fullName>STS__c</fullName>
    <label>STS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>