force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Target_Spot__c.field-meta.xml
<CustomField>
    <fullName>Target_Spot__c</fullName>
    <label>Target Spot</label>
    <length>40</length>
    <type>Text</type>
</CustomField>