force-app/main/default/objects/Genetic_Provider_Variety__c/fields/Variety_Description__c.field-meta.xml
<CustomField>
    <fullName>Variety_Description__c</fullName>
    <label>Variety Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>