force-app/main/default/objects/Genetic_Provider_Variety__c/fields/White_Mold__c.field-meta.xml
<CustomField>
    <fullName>White_Mold__c</fullName>
    <label>White Mold</label>
    <length>40</length>
    <type>Text</type>
</CustomField>